--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,12 @@ authors = [
     {name = "Felipe Siconha",email = "felipesiconha@gmail.com"}
 ]
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.12,<4.0"
 dependencies = [
     "django (>=5.1.7,<6.0.0)",
-    "elasticsearch (>=8.17.2,<9.0.0)"
+    "elasticsearch (>=8.17.2,<9.0.0)",
+    "langchain (>=0.3.20,<0.4.0)",
+    "langchain-community (>=0.3.19,<0.4.0)"
 ]
 
 packages = [
