--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "elasticsearch (>=8.17.2,<9.0.0)",
     "langchain (>=0.3.20,<0.4.0)",
     "langchain-community (>=0.3.19,<0.4.0)",
-    "django-environ (>=0.12.0,<0.13.0)"
+    "django-environ (>=0.12.0,<0.13.0)",
+    "huggingface-hub (>=0.29.2,<0.30.0)"
 ]
 
 packages = [
