--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "langchain (>=0.3.20,<0.4.0)",
     "langchain-community (>=0.3.19,<0.4.0)",
     "django-environ (>=0.12.0,<0.13.0)",
-    "huggingface-hub (>=0.29.2,<0.30.0)"
+    "huggingface-hub (>=0.29.2,<0.30.0)",
+    "langchain-openai (>=0.3.8,<0.4.0)"
 ]
 
 packages = [
