--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,10 @@ dependencies = [
     "langchain-community (>=0.3.19,<0.4.0)",
     "django-environ (>=0.12.0,<0.13.0)",
     "huggingface-hub (>=0.29.2,<0.30.0)",
-    "langchain-openai (>=0.3.8,<0.4.0)"
+    "langchain-openai (>=0.3.8,<0.4.0)",
+    "pytest (>=8.3.5,<9.0.0)",
+    "huggingface (>=0.0.1,<0.0.2)",
+    "pytest-django (>=4.10.0,<5.0.0)"
 ]
 
 packages = [
